The range deleter doesn't validate it is still operating on the same collection after the deletion loop

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.0, v3.6
    • Sharding 2018-12-17
    • 48
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      After the first collection lock acquisition, the CollectionRangeDeleter's asynchronous thread validates that it is operating on the same collection it was scheduled with.

      However, later on it drops the collection lock in order to wait for majority replication/range deleter throttling and when it reacquires it back after the blocking wait completes, it doesn't re-check whether the collection is still the same and proceeds to directly modify the metadata manager state which might be for a completely different collection now.

            Assignee:
            Blake Oler
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: