SERVER-38050 Validate the sameness of collection metadata after the range deleter's deletion loop

(cherry picked from commit cee9c4deed8bbf0c612b465be4625d5d0775d204)