src/mongo/db/s/collection_range_deleter.cpp
@@ -131,38 +131,21 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
     {
         UninterruptibleLockGuard noInterrupt(opCtx->lockState());
         AutoGetCollection autoColl(opCtx, nss, MODE_IX);
-
         auto* const collection = autoColl.getCollection();
-        auto* const css = CollectionShardingRuntime::get(opCtx, nss);
-        auto& metadataManager = css->_metadataManager;
+        auto* const csr = CollectionShardingRuntime::get(opCtx, nss);
+        auto& metadataManager = csr->_metadataManager;
+
+        if (!_checkCollectionMetadataStillValid(
+                opCtx, nss, epoch, forTestOnly, collection, metadataManager)) {
+            return boost::none;
+        }
+
         auto* const self = forTestOnly ? forTestOnly : &metadataManager->_rangesToClean;
-
-        const auto scopedCollectionMetadata =
-            metadataManager->getActiveMetadata(metadataManager, boost::none);
-
-        if (!forTestOnly && (!collection || !scopedCollectionMetadata->isSharded())) {
-            if (!collection) {
-                LOG(0) << "Abandoning any range deletions left over from dropped " << nss.ns();
-            } else {
-                LOG(0) << "Abandoning any range deletions left over from previously sharded"
-                       << nss.ns();
-            }
-
-            stdx::lock_guard<stdx::mutex> lk(css->_metadataManager->_managerLock);
-            css->_metadataManager->_clearAllCleanups(lk);
-            return boost::none;
-        }
-
-        if (!forTestOnly && scopedCollectionMetadata->getCollVersion().epoch() != epoch) {
-            LOG(1) << "Range deletion task for " << nss.ns() << " epoch " << epoch << " woke;"
-                   << " (current is " << scopedCollectionMetadata->getCollVersion() << ")";
-            return boost::none;
-        }
 
         bool writeOpLog = false;
 
         {
-            stdx::lock_guard<stdx::mutex> scopedLock(css->_metadataManager->_managerLock);
+            stdx::lock_guard<stdx::mutex> scopedLock(csr->_metadataManager->_managerLock);
             if (self->isEmpty()) {
                 LOG(1) << "No further range deletions scheduled on " << nss.ns();
                 return boost::none;
@@ -215,14 +198,17 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
                                      << "max"
                                      << range->getMax()));
             } catch (const DBException& e) {
-                stdx::lock_guard<stdx::mutex> scopedLock(css->_metadataManager->_managerLock);
-                css->_metadataManager->_clearAllCleanups(
+                stdx::lock_guard<stdx::mutex> scopedLock(csr->_metadataManager->_managerLock);
+                csr->_metadataManager->_clearAllCleanups(
                     scopedLock,
                     e.toStatus("cannot push startRangeDeletion record to Op Log,"
                                " abandoning scheduled range deletions"));
                 return boost::none;
             }
         }
+
+        const auto scopedCollectionMetadata =
+            metadataManager->getActiveMetadata(metadataManager, boost::none);
 
         try {
             wrote = self->_doDeletion(
@@ -250,7 +236,7 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
         const auto clientOpTime = repl::ReplClientInfo::forClient(opCtx->getClient()).getLastOp();
 
         // Wait for replication outside the lock
-        const auto status = [&] {
+        const auto replicationStatus = [&] {
             try {
                 WriteConcernResult unusedWCResult;
                 return waitForWriteConcern(
@@ -264,15 +250,22 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
         // Don't allow lock interrupts while cleaning up.
         UninterruptibleLockGuard noInterrupt(opCtx->lockState());
         AutoGetCollection autoColl(opCtx, nss, MODE_IX);
-        auto* const css = CollectionShardingRuntime::get(opCtx, nss);
-        auto& metadataManager = css->_metadataManager;
+        auto* const collection = autoColl.getCollection();
+        auto* const csr = CollectionShardingRuntime::get(opCtx, nss);
+        auto& metadataManager = csr->_metadataManager;
+
+        if (!_checkCollectionMetadataStillValid(
+                opCtx, nss, epoch, forTestOnly, collection, metadataManager)) {
+            return boost::none;
+        }
+
         auto* const self = forTestOnly ? forTestOnly : &metadataManager->_rangesToClean;
 
-        stdx::lock_guard<stdx::mutex> scopedLock(css->_metadataManager->_managerLock);
+        stdx::lock_guard<stdx::mutex> scopedLock(csr->_metadataManager->_managerLock);
 
-        if (!status.isOK()) {
+        if (!replicationStatus.isOK()) {
             LOG(0) << "Error when waiting for write concern after removing " << nss << " range "
-                   << redact(range->toString()) << " : " << redact(status.reason());
+                   << redact(range->toString()) << " : " << redact(replicationStatus.reason());
 
             // If range were already popped (e.g. by dropping nss during the waitForWriteConcern
             // above) its notification would have been triggered, so this check suffices to ensure
@@ -281,7 +274,7 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
                 invariant(!self->isEmpty() && self->_orphans.front().notification == notification);
                 LOG(0) << "Abandoning deletion of latest range in " << nss.ns() << " after local "
                        << "deletions because of replication failure";
-                self->_pop(status);
+                self->_pop(replicationStatus);
             }
         } else {
             LOG(0) << "Finished deleting documents in " << nss.ns() << " range "
@@ -304,6 +297,39 @@ boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
 
     notification.abandon();
     return Date_t::now() + stdx::chrono::milliseconds{rangeDeleterBatchDelayMS.load()};
+}
+
+bool CollectionRangeDeleter::_checkCollectionMetadataStillValid(
+    OperationContext* opCtx,
+    const NamespaceString& nss,
+    OID const& epoch,
+    CollectionRangeDeleter* forTestOnly,
+    Collection* collection,
+    std::shared_ptr<MetadataManager> metadataManager) {
+
+    const auto scopedCollectionMetadata =
+        metadataManager->getActiveMetadata(metadataManager, boost::none);
+
+    if (!forTestOnly && (!collection || !scopedCollectionMetadata->isSharded())) {
+        if (!collection) {
+            LOG(0) << "Abandoning any range deletions left over from dropped " << nss.ns();
+        } else {
+            LOG(0) << "Abandoning any range deletions left over from previously sharded"
+                   << nss.ns();
+        }
+
+        stdx::lock_guard<stdx::mutex> lk(metadataManager->_managerLock);
+        metadataManager->_clearAllCleanups(lk);
+        return false;
+    }
+
+    if (!forTestOnly && scopedCollectionMetadata->getCollVersion().epoch() != epoch) {
+        LOG(1) << "Range deletion task for " << nss.ns() << " epoch " << epoch << " woke;"
+               << " (current is " << scopedCollectionMetadata->getCollVersion() << ")";
+        return false;
+    }
+
+    return true;
 }
 
 StatusWith<int> CollectionRangeDeleter::_doDeletion(OperationContext* opCtx,
