src/mongo/db/s/metadata_manager.h
@@ -138,12 +138,12 @@ public:
     boost::optional<ChunkRange> getNextOrphanRange(BSONObj const& from) const;
 
 private:
+    // For access to _managerLock, _rangesToClean, and _clearAllCleanups under task callback
+    friend class CollectionRangeDeleter;
+
     // Management of the _metadata list is implemented in RangePreserver
     friend class RangePreserver;
 
-    // For access to _rangesToClean and _managerLock under task callback
-    friend boost::optional<Date_t> CollectionRangeDeleter::cleanUpNextRange(
-        OperationContext*, NamespaceString const&, OID const&, int, CollectionRangeDeleter*);
 
     /**
      * Represents an instance of what the filtering metadata for this collection was at a particular
